# tv_shows_console_app

./: CMakeLists.txt  CustomException.h  FileNotFoundException.h  Livestream.cpp  Livestream.h  Movie.cpp  Movie.h  OperationsOnListOfPiecesOfCinematography.h  PieceOfCinematography.cpp  PieceOfCinematography.h  Pool.cpp  Pool.h  README.md  Series.cpp  Series.h  main.cpp
